removed the css file to the same folder and changed the path to the href in the link tag, the file in another folder fail to link correctly

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/Asset/css/style.css">
+   
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Kitrick Bell</h1>
     <h2>About me</h2>
-    <nav>
-<ul>
-<li><a href="#">About Me</a></li>
-<li><a href="#">Portfolio</a></li>
-<li><a href="#">Contact</a></li>
+<nav>
+    <ul>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
 
-</ul>
+    </ul>
 
     </nav>
 <div>
