Added text area boxes to the contact html and floated the boxes and the labels to the left. Added dimensions to the message text area so it would display a large box for input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav>
     <ul>
         <h1>Kitrick Bell</h1>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">About Me</a></li>
       
