--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <title>Portfolio</title>
    <link rel="stylesheet" type="text/css" href="./Asset/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="aboutme.css">
+    <link rel="stylesheet" type="text/css" href="./Asset/css/aboutme.css">
 </head>
 <body>
     
