changed the paths for the images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div>
 
 
-    <img src="asset/images/kb.JPG" alt="HELLO"> 
+    <img src="./Asset/images/kb.JPG" alt="HELLO"> 
     <h3>Who am I?</h3>
         <p>My name is Kitrick Bell born in one of the biggest cities in the world, Houston, Texas. Being in a city so big, surrounded by diversity, inspired me to learn about different cultures
             try new food, travel overseas and even learn new languages. I am inspired to learn about the world around it and everything it had to offer no matter how strange or difficult the task may be.
