change the file paths for the images on the portfolio html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,26 +34,26 @@
     <div class="row">
 
         <div class="column">
-             <img  src="asset/images/technics-q-c-200-200-1.jpg" alt="HELLO"> 
+             <img  src="./asset/images/technics-q-c-200-200-1.jpg" alt="HELLO"> 
              <p>Hangman</p>
         </div>      
    
         <div class="column">
-            <img src="asset/images/technics-q-c-200-200-10 (1).jpg" alt="HELLO">
+            <img src="./asset/images/technics-q-c-200-200-10 (1).jpg" alt="HELLO">
             <p>RPG Game</p>
         </div>
 
         <div class="column">
-             <img src="asset/images/technics-q-c-200-200-10.jpg" alt="HELLO">
+             <img src="./asset/images/technics-q-c-200-200-10.jpg" alt="HELLO">
          </div>   
 
 
         <div class="column">
-             <img src="asset/images/technics-q-c-200-200-9.jpg" alt="HELLO">
+             <img src="./asset/images/technics-q-c-200-200-9.jpg" alt="HELLO">
          </div>
 
         <div class="column">
-             <img src="asset/images/technics-q-g-200-200-3.jpg" alt="HELLO">
+             <img src="./asset/images/technics-q-g-200-200-3.jpg" alt="HELLO">
          </div>
 
     </div>
