--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,16 @@
     <link rel="stylesheet" type="text/css" href="./Asset/css/contact.css">
 </head>
 <body>
-    
+    <header>
+            <div class = "name"> 
+            <h1>Kitrick Bell</h1>
+            </div>
+    </header>
     
 <nav>
+   
     <ul>
-        <h1>Kitrick Bell</h1>
+
         <li><a href="contact.html">Contact</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="index.html">About Me</a></li>
